--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Trabajo utilizando SASS, Gulp, CSS y mas",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "gulp"
   },
   "repository": {
     "type": "git",
